修复kvm创建后未自动运行